[package]
name = "nest"
version = "0.2.0"
edition = "2018"
authors = ["Michael Williams <michael.williams@enspiral.com>"]
description = "use your filesystem as a nested data store"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ahdinosaur/nest"
readme = "../README.md"
keywords = ["database", "json", "filesystem"]

[dependencies]
atomicwrites = "0.2"
serde_json = "1.0"

[dev-dependencies]
version-sync = "0.8"
