[package]
name = "nest"
version = "0.3.3"
edition = "2018"
authors = ["Michael Williams <michael.williams@enspiral.com>"]
description = "use your filesystem as a nested data store"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ahdinosaur/nest"
readme = "../README.md"
keywords = ["database", "json", "filesystem"]

[dependencies]
atomicwrites = "0.2"
log = "0.4"
serde_json = "1.0"

[dev-dependencies]
assert_fs = "0.11"
env_logger = "0.6"
predicates = "1.0"
version-sync = "0.8"

[package.metadata.release]
pre-release-replacements = [
  { file="src/lib.rs", search="https://docs.rs/nest/[a-z0-9\\.-]+", replace="https://docs.rs/nest/{{version}}" }
]
