[package]
name = "nest"
version = "0.4.0"
edition = "2018"
authors = ["Michael Williams <michael.williams@enspiral.com>"]
description = "Use your filesystem as a nested data store"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ahdinosaur/nest"
readme = "../README.md"
keywords = ["database", "json", "filesystem"]

[dependencies]
atomicwrites = "0.2"
log = "0.4"
mkdirp = "0.1"
objekt = "0.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde-hjson = { version = "0.9", features = ["preserve_order"] }
serde_yaml = "0.8"
toml = { version = "0.5", features = ["preserve_order"] }
indexmap = "1"

[dev-dependencies]
assert_fs = "0.11"
env_logger = "0.6"
version-sync = "0.8"

[badges]
travis-ci = { repository = "ahdinosaur/nest" }

[package.metadata.release]
no-dev-version = true
pre-release-commit-message = "{{crate_name}}: {{version}} 🐦"
pre-release-hook = ["cargo", "test", "-p", "nest"]
pre-release-replacements = [
  { file="src/lib.rs", search="https://docs.rs/nest/[a-z0-9\\.-]+", replace="https://docs.rs/nest/{{version}}" }
]
